tests/snapshots/lexer_snapshots__lexer_all@tokens-100.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/spec/05_extensions/extend_specialized.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Wrapper",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: LT,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: GT,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: LeftBrace,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "value",
            ),
            position: 27,
            line: 2,
            column: 8,
        },
        Token {
            token_type: Colon,
            position: 28,
            line: 2,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 30,
            line: 2,
            column: 11,
        },
        Token {
            token_type: Comma,
            position: 31,
            line: 2,
            column: 12,
        },
        Token {
            token_type: RightBrace,
            position: 33,
            line: 3,
            column: 2,
        },
        Token {
            token_type: Extend,
            position: 41,
            line: 5,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Wrapper",
            ),
            position: 49,
            line: 5,
            column: 15,
        },
        Token {
            token_type: LT,
            position: 50,
            line: 5,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 53,
            line: 5,
            column: 19,
        },
        Token {
            token_type: GT,
            position: 54,
            line: 5,
            column: 20,
        },
        Token {
            token_type: LeftBrace,
            position: 56,
            line: 5,
            column: 22,
        },
        Token {
            token_type: Function,
            position: 67,
            line: 6,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "double",
            ),
            position: 74,
            line: 6,
            column: 18,
        },
        Token {
            token_type: LeftParen,
            position: 75,
            line: 6,
            column: 19,
        },
        Token {
            token_type: SelfRef,
            position: 79,
            line: 6,
            column: 23,
        },
        Token {
            token_type: RightParen,
            position: 80,
            line: 6,
            column: 24,
        },
        Token {
            token_type: Colon,
            position: 81,
            line: 6,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 85,
            line: 6,
            column: 29,
        },
        Token {
            token_type: LeftBrace,
            position: 87,
            line: 6,
            column: 31,
        },
        Token {
            token_type: SelfRef,
            position: 96,
            line: 7,
            column: 9,
        },
        Token {
            token_type: Dot,
            position: 97,
            line: 7,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "value",
            ),
            position: 102,
            line: 7,
            column: 15,
        },
        Token {
            token_type: Star,
            position: 104,
            line: 7,
            column: 17,
        },
        Token {
            token_type: Int(
                "2",
            ),
            position: 106,
            line: 7,
            column: 19,
        },
        Token {
            token_type: RightBrace,
            position: 110,
            line: 8,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 112,
            line: 9,
            column: 2,
        },
    ],
)
