tests/snapshots/lexer_snapshots__lexer_all@tokens-103.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/spec/06_type_logic/is_operator.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "process",
            ),
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "input",
            ),
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Colon,
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: Pipe,
            position: 29,
            line: 1,
            column: 30,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 33,
            line: 1,
            column: 34,
        },
        Token {
            token_type: RightParen,
            position: 34,
            line: 1,
            column: 35,
        },
        Token {
            token_type: LeftBrace,
            position: 36,
            line: 1,
            column: 37,
        },
        Token {
            token_type: If,
            position: 41,
            line: 2,
            column: 5,
        },
        Token {
            token_type: LeftParen,
            position: 43,
            line: 2,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "input",
            ),
            position: 48,
            line: 2,
            column: 12,
        },
        Token {
            token_type: Is,
            position: 51,
            line: 2,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 55,
            line: 2,
            column: 19,
        },
        Token {
            token_type: RightParen,
            position: 56,
            line: 2,
            column: 20,
        },
        Token {
            token_type: LeftBrace,
            position: 58,
            line: 2,
            column: 22,
        },
        Token {
            token_type: Var,
            position: 66,
            line: 3,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "value",
            ),
            position: 72,
            line: 3,
            column: 14,
        },
        Token {
            token_type: Eq,
            position: 74,
            line: 3,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "input",
            ),
            position: 80,
            line: 3,
            column: 22,
        },
        Token {
            token_type: As,
            position: 83,
            line: 3,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 87,
            line: 3,
            column: 29,
        },
        Token {
            token_type: Semicolon,
            position: 88,
            line: 3,
            column: 30,
        },
        Token {
            token_type: RightBrace,
            position: 92,
            line: 4,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 94,
            line: 5,
            column: 2,
        },
    ],
)
