tests/snapshots/lexer_snapshots__lexer_all@tokens-107.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/spec/05_extensions/extend_basic.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Vehicle",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: LeftBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "speed",
            ),
            position: 24,
            line: 2,
            column: 8,
        },
        Token {
            token_type: Colon,
            position: 25,
            line: 2,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 29,
            line: 2,
            column: 13,
        },
        Token {
            token_type: Comma,
            position: 30,
            line: 2,
            column: 14,
        },
        Token {
            token_type: RightBrace,
            position: 32,
            line: 3,
            column: 2,
        },
        Token {
            token_type: Extend,
            position: 40,
            line: 5,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Vehicle",
            ),
            position: 48,
            line: 5,
            column: 15,
        },
        Token {
            token_type: LeftBrace,
            position: 50,
            line: 5,
            column: 17,
        },
        Token {
            token_type: Function,
            position: 61,
            line: 6,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "is_fast",
            ),
            position: 69,
            line: 6,
            column: 19,
        },
        Token {
            token_type: LeftParen,
            position: 70,
            line: 6,
            column: 20,
        },
        Token {
            token_type: SelfRef,
            position: 74,
            line: 6,
            column: 24,
        },
        Token {
            token_type: RightParen,
            position: 75,
            line: 6,
            column: 25,
        },
        Token {
            token_type: Colon,
            position: 76,
            line: 6,
            column: 26,
        },
        Token {
            token_type: Identifier(
                "bool",
            ),
            position: 81,
            line: 6,
            column: 31,
        },
        Token {
            token_type: LeftBrace,
            position: 83,
            line: 6,
            column: 33,
        },
        Token {
            token_type: SelfRef,
            position: 92,
            line: 7,
            column: 9,
        },
        Token {
            token_type: Dot,
            position: 93,
            line: 7,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "speed",
            ),
            position: 98,
            line: 7,
            column: 15,
        },
        Token {
            token_type: GT,
            position: 100,
            line: 7,
            column: 17,
        },
        Token {
            token_type: Int(
                "100",
            ),
            position: 104,
            line: 7,
            column: 21,
        },
        Token {
            token_type: RightBrace,
            position: 108,
            line: 8,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 110,
            line: 9,
            column: 2,
        },
    ],
)
