tests/snapshots/lexer_snapshots__lexer_all@tokens-109.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/spec/05_extensions/extend_generic_with_interface.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Wrapper",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: LT,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: GT,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: LeftBrace,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "value",
            ),
            position: 27,
            line: 2,
            column: 8,
        },
        Token {
            token_type: Colon,
            position: 28,
            line: 2,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 30,
            line: 2,
            column: 11,
        },
        Token {
            token_type: Comma,
            position: 31,
            line: 2,
            column: 12,
        },
        Token {
            token_type: RightBrace,
            position: 33,
            line: 3,
            column: 2,
        },
        Token {
            token_type: Interface,
            position: 44,
            line: 5,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Named",
            ),
            position: 50,
            line: 5,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 52,
            line: 5,
            column: 18,
        },
        Token {
            token_type: Function,
            position: 63,
            line: 6,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 68,
            line: 6,
            column: 16,
        },
        Token {
            token_type: LeftParen,
            position: 69,
            line: 6,
            column: 17,
        },
        Token {
            token_type: SelfRef,
            position: 73,
            line: 6,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 74,
            line: 6,
            column: 22,
        },
        Token {
            token_type: Colon,
            position: 75,
            line: 6,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 79,
            line: 6,
            column: 27,
        },
        Token {
            token_type: Comma,
            position: 80,
            line: 6,
            column: 28,
        },
        Token {
            token_type: RightBrace,
            position: 82,
            line: 7,
            column: 2,
        },
        Token {
            token_type: Extend,
            position: 90,
            line: 9,
            column: 7,
        },
        Token {
            token_type: LT,
            position: 91,
            line: 9,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 92,
            line: 9,
            column: 9,
        },
        Token {
            token_type: GT,
            position: 93,
            line: 9,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Wrapper",
            ),
            position: 101,
            line: 9,
            column: 18,
        },
        Token {
            token_type: LT,
            position: 102,
            line: 9,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 103,
            line: 9,
            column: 20,
        },
        Token {
            token_type: GT,
            position: 104,
            line: 9,
            column: 21,
        },
        Token {
            token_type: Colon,
            position: 105,
            line: 9,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "Named",
            ),
            position: 111,
            line: 9,
            column: 28,
        },
        Token {
            token_type: LeftBrace,
            position: 113,
            line: 9,
            column: 30,
        },
        Token {
            token_type: Function,
            position: 124,
            line: 10,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 129,
            line: 10,
            column: 16,
        },
        Token {
            token_type: LeftParen,
            position: 130,
            line: 10,
            column: 17,
        },
        Token {
            token_type: SelfRef,
            position: 134,
            line: 10,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 135,
            line: 10,
            column: 22,
        },
        Token {
            token_type: Colon,
            position: 136,
            line: 10,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 140,
            line: 10,
            column: 27,
        },
        Token {
            token_type: LeftBrace,
            position: 142,
            line: 10,
            column: 29,
        },
        Token {
            token_type: StringLit(
                "Wrapper",
            ),
            position: 156,
            line: 11,
            column: 14,
        },
        Token {
            token_type: RightBrace,
            position: 160,
            line: 12,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 162,
            line: 13,
            column: 2,
        },
    ],
)
